# cmake-a-tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makehello.cmake  makehello.cpp  my_library.cpp  test.cpp  unix_specific.cpp  windows_specific.cpp
